2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpunitstore.c: don't call va_arg() too often.

	* libgimpconfig/gimpcolorconfig.c (gimp_color_config_finalize):
	free the string allocated for the display module.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb: plugged a small memleak.

	* app/pdb/image_cmds.c: regenerated.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: added more standard keybindings.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/metadata/metadata.c: don't mark the menu identifier for
	translation.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]: applied a patch from Aron
	Stansvik that adds actions to control hue, saturation and value
	of the foreground and background colors.

2005-04-27  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: use the same terms for the
	checkerboard parameters as used in the GimpPreviewArea popup menu
	(bug #302141).

2005-04-26  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: reviewed strings, simplified
	if possible.

2005-04-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/colortoalpha.c: use the standard order of
	"static" and "inline" qualifiers.

2005-04-25  DindinX  <dindinx@gimp.org>

	* plug-ins/common/colortoalpha.c: update the preview continuously
	when the color changes in the color selector.

2005-04-25  Michael Natterer  <mitch@gimp.org>

	* app/app_procs.c (app_libs_init): call g_thread_init() only if
	the GThread system is not already initialized.

2005-04-25  Sven Neumann  <sven@gimp.org>

	* app/file/gimprecentlist.c (gimp_recent_list_add_item): close the
	file descriptor if we fail to obtain the lock (bug #151767).

2005-04-25  Sven Neumann  <sven@gimp.org>

	* app/plug-in/plug-in-proc-def.h: added a boolean flag to the
	ProcDef struct to identify file procedures.

	* app/xcf/xcf.c: changed accordingly.
